refactor: 골 기간에 대한 필드 Value Object로 수정